@section RN1100 SCIP 11.0.0
***************************

Features
--------

- adds functionality to compute symmetries of entire symmetry detection graph rather than just the restriction to variable nodes

Interface changes
-----------------

### Deleted and changed API methods

- SCIPcreateSymgraph() receives an additional argument to specify an epsilon value that is used for epsilon-comparisons

### New API functions

- added SYMcomputeSymmetryGeneratorsNode() to compute generators of the automorphism group of an entire (node set) of a symmetry detection graph

### Data structures

- struct SYM_Graph receives an additional field to specify an epsilon value that is used for epsilon-comparisons
- new enum SYM_GROUPTYPE to encode which symmetry group of a symmetry detection graph is computed

@page RN10 Release notes for SCIP 10

@section RN1010 SCIP 10.1.0
***************************

Features
--------

Performance improvements
------------------------

Fixed bugs
----------

Interface changes
-----------------

### New API functions

- added SCIPcalcBestCut() to try multiple cut generation methods (FlowCover, KnapsackCover, CMIR) on an aggregation row and return the best cut by efficacy
- added SCIPinitCutGenParams(), SCIPcreateCutGenResult(), and SCIPfreeCutGenResult() as helper functions for SCIPcalcBestCut()

### New parameters

- `presolving/milp/enableGF2`: whether to enable GF2 presolver in PaPILO

### Changed parameters

### Data Structures

- added struct \ref SCIP_CUTGENPARAMS for cut generation parameters
- added struct \ref SCIP_CUTGENRESULT for cut generation result

Build system
------------

- added build flag CHECKNAME=auto to control name checks in plugin function calls

### Cmake

### Makefiles

Testing
-------

Miscellaneous
-------------


@section RN1001 SCIP 10.0.1
***************************

Fixed bugs
----------
